tests/ui/c-variadic/pass-by-value-abi.win.stderr
error: fn_abi_of(take_va_list) = FnAbi {
           args: [
               ArgAbi {
                   layout: TyAndLayout {
                       ty: VaList<'_>,
                       layout: Layout {
                           size: Size(8 bytes),
                           align: AbiAlign {
                               abi: Align(8 bytes),
                           },
                           backend_repr: Scalar(
                               Initialized {
                                   value: Pointer(
                                       AddressSpace(
                                           0,
                                       ),
                                   ),
                                   valid_range: 0..=$MAX,
                               },
                           ),
                           fields: Arbitrary {
                               offsets: $OFFSETS,
                               in_memory_order: $MEMORY_INDEX,
                           },
                           largest_niche: None,
                           uninhabited: false,
                           variants: Single {
                               index: 0,
                           },
                           max_repr_align: None,
                           unadjusted_abi_align: Align(8 bytes),
                           randomization_seed: $SEED,
                       },
                   },
                   mode: Direct(
                       ArgAttributes {
                           regular: NoUndef,
                           arg_ext: None,
                           pointee_size: Size(0 bytes),
                           pointee_align: None,
                       },
                   ),
               },
           ],
           ret: ArgAbi {
               layout: TyAndLayout {
                   ty: (),
                   layout: Layout {
                       size: Size(0 bytes),
                       align: AbiAlign {
                           abi: Align(1 bytes),
                       },
                       backend_repr: Memory {
                           sized: true,
                       },
                       fields: Arbitrary {
                           offsets: [],
                           in_memory_order: [],
                       },
                       largest_niche: None,
                       uninhabited: false,
                       variants: Single {
                           index: 0,
                       },
                       max_repr_align: None,
                       unadjusted_abi_align: Align(1 bytes),
                       randomization_seed: $SEED,
                   },
               },
               mode: Ignore,
           },
           c_variadic: false,
           fixed_count: 1,
           conv: C,
           can_unwind: false,
       }
  --> $DIR/pass-by-value-abi.rs:27:1
   |
LL | pub extern "C" fn take_va_list(_: VaList<'_>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

